--- a/client/src/styles/utils/_vars.scss
+++ b/client/src/styles/utils/_vars.scss
@@ -9,6 +9,7 @@ $color-4: #fdeeee;
 $color-black: hsl(0deg, 0%, 0%);
 $color-white: hsl(0deg, 0%, 100%);
 $shadow: rgb(219, 218, 218);
+$color-footer-bg: hsl(0, 90%, 70%);
 
 /* ====== TYPOGRAPHY ====== */
 $font-size-base: 1em;
