FRONT feat: added wave + boat animation / fix: class naming syntax error (class => className)

--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -1,6 +1,7 @@
 @use './../../styles/utils/vars';
 
 .footer {
+  z-index: 10;
   margin-top: auto;
   text-align: center;
   color: vars.$color-white;
