--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -6,7 +6,7 @@
   outline: none;
   border: none;
   text-decoration: none;
-  color: vars.$color-black;
+  color: vars.$color-5;
 
   &::selection {
     background: vars.$color-1;
